[gd_scene load_steps=4 format=3 uid="uid://bji30meh012ld"]

[ext_resource type="Theme" uid="uid://bj3ryenfgg5p6" path="res://UI.tres" id="1_act3r"]
[ext_resource type="Script" path="res://Scenes/Menu/menu.gd" id="1_q7ce3"]

[sub_resource type="Theme" id="Theme_72u4k"]

[node name="Menu" type="CanvasLayer"]
visible = false
script = ExtResource("1_q7ce3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 50

[node name="MainWindow" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("1_act3r")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainWindow"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainWindow/MarginContainer"]
layout_mode = 2

[node name="Output" type="Control" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme = SubResource("Theme_72u4k")

[node name="Characters" type="Panel" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Output"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Output/Characters"]
layout_mode = 0
offset_left = 30.0
offset_top = 20.0
offset_right = 397.0
offset_bottom = 469.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Output/Characters/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Inventory" type="Panel" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Output"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Output/Inventory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Output/Inventory/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.5
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Output/Inventory/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="ItemContainer" type="GridContainer" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Output/Inventory/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 22
columns = 2

[node name="ItemDescriptPanel" type="Panel" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Output/Inventory/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemDescriptLabel" type="Label" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Output/Inventory/VBoxContainer/ItemDescriptPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 10.0
offset_right = -18.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Item information and description goes here"
autowrap_mode = 2

[node name="Magic" type="Panel" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Output"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Status" type="Panel" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Output"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Equipment" type="Panel" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Output"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Settings" type="Panel" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Output"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Save" type="Panel" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Output"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer" type="Control" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Options" type="Panel" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Options/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Items" type="Button" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Options/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Items"

[node name="Status" type="Button" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Options/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Status
"

[node name="Equip" type="Button" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Options/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Equip"

[node name="Magic" type="Button" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Options/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Magic"

[node name="Options" type="Button" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Options/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="Save" type="Button" parent="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Options/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[connection signal="pressed" from="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Options/MarginContainer/HBoxContainer/Items" to="." method="_on_items_pressed"]
[connection signal="pressed" from="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Options/MarginContainer/HBoxContainer/Status" to="." method="_on_status_pressed"]
[connection signal="pressed" from="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Options/MarginContainer/HBoxContainer/Equip" to="." method="_on_equip_pressed"]
[connection signal="pressed" from="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Options/MarginContainer/HBoxContainer/Magic" to="." method="_on_magic_pressed"]
[connection signal="pressed" from="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Options/MarginContainer/HBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/MainWindow/MarginContainer/HBoxContainer/Options/MarginContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
